fix board wrapping because of scrollbar

--- a/app/assets/stylesheets/base/_fonts.scss
+++ b/app/assets/stylesheets/base/_fonts.scss
@@ -51,6 +51,12 @@
   font-size: 0.85rem;
 }
 
+@mixin sans-serif-biggest {
+  font-family: 'sans-serif';
+  font-size: 0.9rem;
+  line-height: 1.5rem;
+}
+
 // sans-serif 16px bigger
 @mixin sans-serif-bigger {
   font-family: 'sans-serif';
