--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -23,7 +23,7 @@ a {
   }
 }
 
-a, p, h1, h2, h3, span, img {
+a, p, h1, h2, h3, h4, span, img {
   user-select: none;
 }
 
