--- a/app/assets/stylesheets/styles/board_index.scss
+++ b/app/assets/stylesheets/styles/board_index.scss
@@ -34,7 +34,7 @@
 .board {
   vertical-align: top;
   display: inline-block;
-  width: 14.8rem;
+  width: 14.6rem;
   height: 4.8rem;
   padding: 0.4rem 0.6rem;
   background-color: #0067A3;
@@ -80,6 +80,7 @@
 
 .new-board-form { //popup
   height: 10rem;
+  position: absolute;
   width: 15rem;
   margin-left: -0.6rem;
   margin-top: -0.4rem;
