--- a/app/assets/stylesheets/styles/board_show.scss
+++ b/app/assets/stylesheets/styles/board_show.scss
@@ -2,21 +2,50 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.board-show {
+  background-color: #0079BF;
+}
+
 .board-wrapper {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 10rem;
-  background-color: green;
 }
 
-/* .delete-board-link{ */
-/* color: #F6F6F6; */
-/* &:hover { */
-/* color: white; */
-/* } */
-/* } */
-/*  */
+.board-header {
+  height: 2.3rem;
+  width: 100%;
+  padding: .4rem;
+}
+
+.board-title {
+  @include sans-serif-biggest;
+  margin: 0;
+  display: inline-block;
+  max-width: 10rem;
+  padding: 0 0.5rem;
+  color: #f6f6f6;
+  overflow: hidden;
+  font-weight: bold;
+  border-radius: 3px;
+  cursor: pointer;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  &:hover {
+    background: rgba(0,0,0,.12);
+  }
+}
+
+.delete-board-link{
+  @extend .board-title;
+  color: #F6F6F6;
+  &:hover {
+    color: white;
+  }
+}
+
 /* .edit-in-place span { */
 /* cursor: pointer; */
 /* } */
